--- a/whatHappenedToMe/prueba/Base.lproj/Main.storyboard
+++ b/whatHappenedToMe/prueba/Base.lproj/Main.storyboard
@@ -18,23 +18,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="suS-yt-iWV">
-                                <rect key="frame" x="164" y="314" width="46" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="suS-yt-iWV">
+                                <rect key="frame" x="164" y="314" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <action selector="actionButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fD5-AY-Uel"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LFL-Oz-VSy">
-                                <rect key="frame" x="69" y="378" width="237" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LFL-Oz-VSy">
+                                <rect key="frame" x="175" y="374" width="25" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="suS-yt-iWV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9dm-OB-w6d"/>
+                            <constraint firstItem="LFL-Oz-VSy" firstAttribute="top" secondItem="suS-yt-iWV" secondAttribute="bottom" constant="30" id="DcE-eY-HkG"/>
+                            <constraint firstItem="LFL-Oz-VSy" firstAttribute="centerX" secondItem="suS-yt-iWV" secondAttribute="centerX" id="Zfv-tJ-zPx"/>
+                            <constraint firstItem="suS-yt-iWV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="294" id="eeH-4k-dqC"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
