--- a/WorldWrotter/WorldWrotter/Base.lproj/Main.storyboard
+++ b/WorldWrotter/WorldWrotter/Base.lproj/Main.storyboard
@@ -77,6 +77,7 @@
                     </view>
                     <connections>
                         <outlet property="celsiusLabel" destination="Wwe-Pu-AqD" id="5cA-4i-R5T"/>
+                        <outlet property="textField" destination="kCm-Lg-eKz" id="Hes-JK-yYF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
