--- a/WorldWrotter/WorldWrotter/Base.lproj/Main.storyboard
+++ b/WorldWrotter/WorldWrotter/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ahY-wL-3v9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="z6b-Gq-Qxn">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Conversion View Controller-->
+        <!--Conversor-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ConversionViewController" customModule="WorldWrotter" customModuleProvider="target" sceneMemberID="viewController">
@@ -75,6 +75,7 @@
                             <outletCollection property="gestureRecognizers" destination="WWa-TL-ImL" appends="YES" id="Vgt-S4-30j"/>
                         </connections>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Conversor" image="ConvertIcon" id="auG-Zh-K3W"/>
                     <connections>
                         <outlet property="celsiusLabel" destination="Wwe-Pu-AqD" id="5cA-4i-R5T"/>
                         <outlet property="textField" destination="kCm-Lg-eKz" id="Hes-JK-yYF"/>
@@ -87,9 +88,9 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="72.799999999999997" y="40.929535232383813"/>
+            <point key="canvasLocation" x="1300" y="497"/>
         </scene>
-        <!--View Controller-->
+        <!--Mapa-->
         <scene sceneID="TxY-Tf-VWy">
             <objects>
                 <viewController id="ahY-wL-3v9" sceneMemberID="viewController">
@@ -97,10 +98,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </mapView>
+                    <tabBarItem key="tabBarItem" title="Mapa" image="MapIcon" id="gAc-xT-drC"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X1q-iT-hta" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="777" y="41"/>
+            <point key="canvasLocation" x="1300" y="-271"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="RUy-2K-Sbz">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="z6b-Gq-Qxn" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bqr-5V-cOp">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="btK-ds-pJz"/>
+                        <segue destination="ahY-wL-3v9" kind="relationship" relationship="viewControllers" id="WFh-8r-jSS"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Flb-nE-8Dj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="177" y="113"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ConvertIcon" width="48" height="32"/>
+        <image name="MapIcon" width="48" height="32"/>
+    </resources>
 </document>
